# tests-python

./: .gitignore  .travis.yml  Dockerfile  HitosIV.py  HitosIV_test.py  Procfile  README.md  azure-pipelines.yml  crea_pod.sh  docker-compose.yml  hugitos.py  hugitos_k8s.yaml  hugitos_test.py  jobs.nomad  log.env  maskfile.md  nodata.Dockerfile  pyproject.toml  requirements.txt  starlitos_test.py  test_HitosIV.py
.github/workflows/: docker-compose.yml  test.yml
.semaphore/: semaphore.yml
HitosIV/: __init__.py  config.py  core.py  etcd-vars.py  etcd_vars.py  hugitos.py  starlitos.py
HitosIV/tests/: HitosIV_test.py  test_HitosIV.py
data/: Dockerfile  README.md  hitos.json
docs/: index.html  ws.html
docs/css/: extra.css
docs/css/theme/: night.css
src/: HitosIV.py
tests/: hugitos_test.py  test_config.py
