[tool.poetry]
name = "Hugitos"
version = "0.1.0"
description = "Una pequeña demo para la asignatura de IV"
authors = ["JJ Merelo"]
packages= [ { include = "HitosIV" }, ]

[tool.poetry.dependencies]
python = ">=3.6"
hug = "^2.6.1"
gunicorn = "^20.0.4"
python-json-logger = "^2.0.1"
etcd3 = "^0.12.0"
python-dotenv = "^0.15.0"
starlette = "^0.14.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[tool.poetry.scripts]
set-vars = "HitosIV.etcd_vars:main"