[tool.poetry]
name = "Hugitos"
version = "0.1.0"
description = "Una pequeña demo para la asignatura de IV"
authors = ["JJ Merelo"]
packages= [ { include = "HitosIV" }, ]

[tool.poetry.dependencies]
python = ">=3.7"
hug = "^2.6.1"
gunicorn = "^22.0.0"
python-json-logger = "^2.0.1"
etcd3 = "^0.12.0"
python-dotenv = "^0.15.0"
starlette = "^0.27.0"
python-multipart = ">= 0"
python-logstash = "^0.4.6"
python-logstash-async = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[tool.poetry.scripts]
set-vars = "HitosIV.etcd_vars:main"
start = "hugitos:__hug_wsgi__"